--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,8 @@ pycryptodome==3.21.0
 pydantic==2.10.6
 pydantic_core==2.27.2
 pyodbc==5.2.0
+pyotp==2.9.0
+python-dotenv==1.1.0
 python-engineio==4.11.2
 python-multipart==0.0.20
 python-socketio==5.12.1
@@ -44,4 +46,3 @@ urllib3==2.1.0
 uvicorn==0.34.0
 Werkzeug==3.0.1
 wsproto==1.2.0
-pyotp==2.9.0
